// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render disabled option base 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-14-menu"
        role="combobox"
      >
        <label
          for="downshift-14-input"
          id="downshift-14-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-14-menu"
              aria-labelledby="downshift-14-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
              data-testid="SelectDropdown__input"
              disabled=""
              id="downshift-14-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-14-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-14-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled option group 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-16-menu"
        role="combobox"
      >
        <label
          for="downshift-16-input"
          id="downshift-16-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
          disabled=""
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-16-menu"
              aria-labelledby="downshift-16-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
              data-testid="SelectDropdown__input"
              disabled=""
              id="downshift-16-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-16-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-16-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid option base 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="sc-bdvvtL qGXhc text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              circle-exclamation-mark.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-10-menu"
        role="combobox"
      >
        <label
          for="downshift-10-input"
          id="downshift-10-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-10-menu"
              aria-invalid="true"
              aria-labelledby="downshift-10-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-10-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
            <div
              class="pl-3"
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-danger-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-10-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-10-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid option group 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          aria-invalid="true"
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="sc-bdvvtL qGXhc text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              circle-exclamation-mark.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-12-menu"
        role="combobox"
      >
        <label
          for="downshift-12-input"
          id="downshift-12-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-12-menu"
              aria-invalid="true"
              aria-labelledby="downshift-12-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-12-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdvvtL qGXhc text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  circle-exclamation-mark.svg
                </svg>
              </div>
            </span>
            <div
              class="pl-3"
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-danger-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-12-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-12-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-0-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-0-menu"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-0-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-0-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base with custom label 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        role="combobox"
      >
        <label
          for="downshift-4-input"
          id="downshift-4-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-4-menu"
              aria-labelledby="downshift-4-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-4-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500 transform rotate-180"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc is-open"
          id="downshift-4-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--0"
            id="downshift-4-item-0"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 1
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--1"
            id="downshift-4-item-1"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 2
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--2"
            id="downshift-4-item-2"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 3
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-314-menu"
        role="combobox"
      >
        <label
          for="downshift-314-input"
          id="downshift-314-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-314-menu"
              aria-labelledby="downshift-314-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="SelectDropdown__input"
              id="downshift-314-input"
              placeholder="Select option"
              value="3"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-314-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-314-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-30-menu"
        role="combobox"
      >
        <label
          for="downshift-30-input"
          id="downshift-30-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          Option 3
          …
        </div>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-30-menu"
              aria-labelledby="downshift-30-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="SelectDropdown__input"
              id="downshift-30-input"
              placeholder="Select option"
              value="Option 3"
            />
            <span
              class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
              data-testid="Input__suggestion"
            >
              <span
                class="truncate"
              >
                Option 3
              </span>
            </span>
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-30-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-30-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-36-menu"
        role="combobox"
      >
        <label
          for="downshift-36-input"
          id="downshift-36-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-36-menu"
              aria-labelledby="downshift-36-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-36-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-36-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-36-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option base without caret 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-18-menu"
        role="combobox"
      >
        <label
          for="downshift-18-input"
          id="downshift-18-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-18-menu"
              aria-labelledby="downshift-18-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-18-input"
              placeholder="Select option"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="downshift-18-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-18-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <label
          for="downshift-2-input"
          id="downshift-2-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-labelledby="downshift-2-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-2-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-2-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group with custom label 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-7-menu"
        role="combobox"
      >
        <label
          for="downshift-7-input"
          id="downshift-7-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-7-menu"
              aria-labelledby="downshift-7-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-7-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500 transform rotate-180"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-7-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc is-open"
          id="downshift-7-menu"
          role="listbox"
        >
          <ul
            class="select-list-option-group"
            data-testid="SelectDropdown__option-group--0"
          >
            <li
              class="select-list-option-head"
            >
              <div
                class="select-list-option-head__label"
              >
                Group1
              </div>
            </li>
            <li
              aria-selected="false"
              class="select-list-option"
              data-testid="SelectDropdown__option--0"
              id="downshift-7-item-0"
              role="option"
            >
              <div
                class="select-list-option__label"
              >
                <span>
                  Label Option 1
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="select-list-option"
              data-testid="SelectDropdown__option--1"
              id="downshift-7-item-1"
              role="option"
            >
              <div
                class="select-list-option__label"
              >
                <span>
                  Label Option 2
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="select-list-option-group"
            data-testid="SelectDropdown__option-group--1"
          >
            <li
              class="select-list-option-head"
            >
              <div
                class="select-list-option-head__label"
              >
                Group2
              </div>
            </li>
            <li
              aria-selected="false"
              class="select-list-option"
              data-testid="SelectDropdown__option--2"
              id="downshift-7-item-2"
              role="option"
            >
              <div
                class="select-list-option__label"
              >
                <span>
                  Label Item 1
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="select-list-option"
              data-testid="SelectDropdown__option--3"
              id="downshift-7-item-3"
              role="option"
            >
              <div
                class="select-list-option__label"
              >
                <span>
                  Label Item 2
                </span>
              </div>
            </li>
          </ul>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-317-menu"
        role="combobox"
      >
        <label
          for="downshift-317-input"
          id="downshift-317-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-317-menu"
              aria-labelledby="downshift-317-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="SelectDropdown__input"
              id="downshift-317-input"
              placeholder="Select option"
              value="3"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-317-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-317-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-33-menu"
        role="combobox"
      >
        <label
          for="downshift-33-input"
          id="downshift-33-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          Item 1
          …
        </div>
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-33-menu"
              aria-labelledby="downshift-33-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="SelectDropdown__input"
              id="downshift-33-input"
              placeholder="Select option"
              value="Item 1"
            />
            <span
              class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
              data-testid="Input__suggestion"
            >
              <span
                class="truncate"
              >
                Item 1
              </span>
            </span>
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-33-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-33-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-38-menu"
        role="combobox"
      >
        <label
          for="downshift-38-input"
          id="downshift-38-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-38-menu"
              aria-labelledby="downshift-38-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-38-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-38-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-38-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render option group without caret 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-20-menu"
        role="combobox"
      >
        <label
          for="downshift-20-input"
          id="downshift-20-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-20-menu"
              aria-labelledby="downshift-20-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-20-input"
              placeholder="Select option"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="downshift-20-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-20-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-40-menu"
        role="combobox"
      >
        <label
          for="downshift-40-input"
          id="downshift-40-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-40-menu"
              aria-labelledby="downshift-40-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-40-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-40-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-40-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-42-menu"
        role="combobox"
      >
        <label
          for="downshift-42-input"
          id="downshift-42-label"
        />
        <div
          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-42-menu"
              aria-labelledby="downshift-42-label"
              autocomplete="off"
              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
              data-testid="SelectDropdown__input"
              id="downshift-42-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                  height="10"
                  width="10"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-42-label"
          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
          id="downshift-42-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
